further query optimizations for IU-1 and IC-10